# makeRecipe

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  dockerfile  manage.py  package-lock.json  package.json  polls  pyproject.toml  release.sh  requirements.in  requirements.txt  response.json  run.sh  tailwind.config.js
makeRecipe/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_ingredient_unit.py  0003_managedingredient.py  0004_link_ingredients_to_managed.py  0005_alter_ingredient_name.py  0006_managedingredient_category_and_more.py  0007_preload_ingredients.py  0008_remove_managedingredient_container_sizes_and_more.py  0009_alter_ingredient_unit.py
recipes/templates/recipes/: add_recipe.html  base.html  edit_managed_ingredient.html  ingridient_form_fields.html  manage_ingredients.html  recipe_detail.html  recipe_list.html  scale_recipe.html  shopping_list.html
recipes/views/: __init__.py  ingridientHandler.py  newScraper.py  pages.py  parser.py  quantityHandler.py  recipeHandler.py  scrapingHandler.py  shoppingListHandler.py  views.py
static/css/: output.css
static/js/: add_recipe.js  autocomplete.js  new_ingredient_autocomplete.js  new_recipe_manager.js  new_recipe_scraper.js  recipe_form.js  scrape.js
staticfiles/css/: output.css
staticfiles/js/: add_recipe.js  scrape.js
tailwindtheme/static_src/: package-lock.json  package.json  tailwind.config.js
