[project]
name = "makerecipe"
version = "0.1.0"
description = "MakeRecipe is a Recipe webpage for preparing large meals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.9.1",
    "beautifulsoup4>=4.13.4",
    "django>=5.2.4",
    "django-bootstrap5>=25.2",
    "django-debug-toolbar>=6.0.0",
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "gunicorn>=23.0.0",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.14.1",
    "whitenoise>=6.9.0",
]
